# stellarlend-contracts

./: CHECKED_ARITHMETIC_COMPLETION_REPORT.md  CREATE_PR_INSTRUCTIONS.md  FIX_COMPARE_BUTTON.md  GOVERNANCE_AUDIT_FINAL_SUMMARY.md  GOVERNANCE_AUDIT_IMPLEMENTATION_SUMMARY.md  GOVERNANCE_AUDIT_PR_DESCRIPTION.md  IMPLEMENTATION_SUMMARY_DEBT_CEILING.md  INTEREST_ORDERING_IMPLEMENTATION_SUMMARY.md  MULTISIG_THRESHOLD_TIMELOCK_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PR_BODY.md  PR_BODY_687.md  PR_LINK_INSTRUCTIONS.md  PUSH_COMMANDS.md  QUICK_START_TESTING.md  README.md  TEST_VERIFICATION_CHECKED_ARITHMETIC.md  package-lock.json  task29.md  test_token_receiver.rs
api/: .env.example  README.md
doc/: storage.md
docs/: ACTIVITY_ORDERING_GUARANTEES.md  CROSS_ASSET_RULES.md  INDEX.md  (+24 more)
stellar-lend/: Cargo.toml  cobertura.xml
stellar-lend/contracts/: ARCHITECTURE.md
stellar-lend/contracts/amm/: AMM_MATH.md  Cargo.toml  MINT_INVARIANTS.md  SWAP_SYMMETRY.md
stellar-lend/contracts/amm/src/: lib.rs  liquidity_math.rs  math.rs  swap_symmetry_test.rs  zero_reserve_test.rs
stellar-lend/contracts/bridge/: Cargo.toml  README.md  SECURITY_NOTES.md
stellar-lend/contracts/bridge/src/: inbound_cap_test.rs  lib.rs  rotation_test.rs
stellar-lend/contracts/common/: Cargo.toml
stellar-lend/contracts/common/src/: lib.rs
stellar-lend/contracts/hello-world/: Cargo.toml  FUZZ_TESTING_GUIDE.md  INITIALIZATION_SECURITY_NOTES.md  KEYS_AUDIT.md
stellar-lend/contracts/hello-world/src/: amm.rs  amm_twap.rs  analytics.rs  cross_asset.rs  governance.rs  lib.rs  liquidate.rs  oracle.rs  position_summary_test.rs  storage.rs  twap_tests.rs  types.rs
stellar-lend/contracts/hello-world/src/tests/: mod.rs
stellar-lend/contracts/lending/: CROSS_ASSET_LIQUIDATION_NOTES.md  Cargo.toml  INTEREST_ORDERING_TIME_TESTS.md  LIFECYCLE_SECURITY_NOTES.md  LIQUIDATE_ACCRUAL_NOTES.md  LIQUIDATION_BONUS_INVARIANTS.md  LIQUIDATION_INVARIANTS.md  LIQUIDATION_PAUSE_SECURITY_NOTES.md  PERFORMANCE_REGRESSION_TESTING.md  README.md  SECURITY.md  SECURITY_NOTES.md  TODO.md  UPGRADE_QUICK_REFERENCE.md  bad_debt_accounting.md  borrow.md  cross_asset.md  deposit.md  emergency_shutdown.md  flash_loan.md  pause.md  token_receiver.md  views.md
stellar-lend/contracts/lending/docs/: governance_audit.md
stellar-lend/contracts/lending/examples/: scaling_demo.rs
stellar-lend/contracts/lending/fuzz/: Cargo.toml  README.md
stellar-lend/contracts/lending/fuzz/corpus/fuzz_repay_borrow_roundtrip/: alternating_borrow_repay  full_repay_then_borrow_again  overflow_at_extreme_principal  repay_before_any_borrow  zero_elapsed_throughout
stellar-lend/contracts/lending/fuzz/fuzz_targets/: fuzz_accrual.rs  fuzz_borrow_rate.rs  fuzz_health_factor.rs  fuzz_liquidate_close_factor.rs  fuzz_liquidation.rs  fuzz_repay_borrow_roundtrip.rs  fuzz_supply_rate.rs  fuzz_utilization.rs
stellar-lend/contracts/lending/src/: bad_debt_ledger_test.rs  bad_debt_write_off_test.rs  borrow.rs  borrow_cap_test.rs  borrow_withdraw_adversarial_test.rs  borrow_withdraw_rounding_timing_test.rs  cross_asset.rs  cross_asset_deposit_cap_test.rs  cross_asset_doctest.rs  cross_asset_e2e_test.rs  debt.rs  deposit_cap_race_test.rs  errors.rs  flash_loan.rs  flash_pause_gating_test.rs  governance_audit_test.rs  granular_pause_ops_test.rs  interest_drift_regression_test.rs  interest_ordering_time_test.rs  interest_rate.rs  lib.rs  liquidate.rs  liquidate_accrual_test.rs  liquidate_checked_sub_test.rs  liquidate_close_factor_test.rs  liquidate_event_test.rs  liquidate_pause_test.rs  liquidation_bonus_proptest.rs  liquidation_pause_policy_test.rs  liquidation_sequence_invariant_test.rs  math.rs  oracle.rs  oracle_adversarial_test.rs  oracle_migration_test.rs  oracle_payload_binding_test.rs  oracle_price_bounds_test.rs  oracle_staleness_test.rs  oracle_test.rs  property_invariants_test.rs  rate_model.rs  (+8 more)
stellar-lend/contracts/lending/test_snapshots/borrow_test/: test_borrow_below_minimum.1.json  test_borrow_debt_ceiling.1.json  test_borrow_insufficient_collateral.1.json  test_borrow_interest_accrual.1.json  test_borrow_invalid_amount.1.json  test_borrow_multiple_times.1.json  test_borrow_protocol_paused.1.json  test_borrow_success.1.json  test_collateral_ratio_validation.1.json  test_overflow_protection.1.json  test_pause_unpause.1.json
stellar-lend/contracts/lending/test_snapshots/pause_test/: test_all_granular_pauses.1.json  test_global_pause.1.json  test_pause_borrow_granular.1.json  test_pause_events.1.json  test_set_pause_unauthorized_address.1.json
stellar-lend/contracts/lending/tests/: cross_contract_invocation.rs  flash_callback_revert_test.rs  flash_loan_repayment.rs  interest_drift_regression_test.rs  liquidation_mechanics_test.rs
stellar-lend/contracts/multisig/: Cargo.toml
stellar-lend/contracts/multisig/src/: lib.rs  quorum_edge_test.rs
stellar-lend/contracts/timelock/: timelock.md
stellar-lend/contracts/timelock/src/: governance_tests.rs  integration_tests.rs  lib.rs  storage.rs
stellar-lend/contracts/vesting/: Cargo.toml  PAUSE.md  README.md
stellar-lend/contracts/vesting/src/: lib.rs  pause_test.rs  revoke_split_test.rs  vesting_views_test.rs
stellar-lend/docs/: INTEREST_NUMERIC_ASSUMPTIONS.md  INTEREST_ROUNDING_FIX.md
(+61 files in other folders)
