[workspace]
resolver = "2"
members = [
  "contracts/common",
  "contracts/hello-world",
  "contracts/lending",
  "contracts/multisig",
  "contracts/vesting",
  "cross_asset_test",
  "contracts/amm",
]

[workspace.dependencies]
# Keep shared Soroban and test dependency versions pinned in one place.
soroban-sdk = "=25.3.1"
soroban-token-sdk = "=25.3.1"
proptest = "1.5"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
