[package]
name = "stellarlend-amm"
version = "0.1.0"
edition = "2021"

[lib]
name = "stellarlend_amm"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.5"

[features]
testutils = ["soroban-sdk/testutils"]
